added about us and how to play

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,3 +93,7 @@ select,
 a {
   -webkit-tap-highlight-color: transparent !important;
 }
+
+.polygon {
+  clip-path: polygon(0% 0%, 0% 100%, 100% 100%);
+}
